Unify Refaster rule definitions
This large changeset contains the result of several rounds of code
cleanup, aiming to improve consistency and clarify. These changes were
performed partially using Claude Code, and partially using unreleased
Error Prone bug checkers.

These changes should make it easier for LLMs to generate compliant code,
"simply" by matching the approach taken by existing rules.

Summary of changes:
- Unify Javadoc rule description format.
- Unify rule naming, by deriving each rule's name from its
  `@AfterTemplate` code.
- Apply a more unified template parameter naming scheme, by deriving
  names from the context in which parameters a used, and falling back to
  deriving their name from their type.
- For each template method, declare its most specific denotable return
  type. This makes it easier to spot rules that introduce possible
  incompatibilities.
- Drop or rephrase some comments.
- Document some semantic changes applied by Refaster rules. (Much more
  to be done here.)
- Drop duplicated expressions from the `AssertThatIs{,Not}EqualTo`
  Refaster rules.
- Drop `@AlsoNegation` from `StreamFindAnyIsEmpty` and extend
  `StreamFindAnyIsPresent` instead.
- Improve some JUnit and TestNG migration rules by adding
  `@Matches(IsLambdaExpressionOrMethodReference.class)` guards.
- Partially clean up test logic by using dummy values more consistently,
  introducing positive and negative test cases for `@{,Not}Matches` and
  `@AlsoNegation` constraints, and ordering test expressions to match
  template declaration order.